[gd_scene load_steps=3 format=3 uid="uid://di5rfh0qr07fm"]

[ext_resource type="Script" path="res://countdown.gd" id="1_3eksv"]
[ext_resource type="Texture2D" uid="uid://dmfr3lqixtocg" path="res://Ressources/Images/rond-vert.png" id="1_5o0d8"]

[node name="VBoxContainer" type="VBoxContainer"]
offset_left = 100.0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 100.0
script = ExtResource("1_3eksv")

[node name="CountdownCenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="CountdownProgressBar" type="TextureProgressBar" parent="CountdownCenterContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 30.0
fill_mode = 5
texture_progress = ExtResource("1_5o0d8")
tint_under = Color(1, 1, 1, 0)
tint_over = Color(1, 1, 1, 0)

[node name="CountdownLabel" type="Label" parent="CountdownCenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.160784, 0, 1)
theme_override_font_sizes/font_size = 90
text = "0"

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.25098, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "PrÃªts ?"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
